--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /**
- * Theme Name:  Eri
+ * Theme Name:  Eri Scaffold
  * Theme URI:   https://eridesign.com
  * Description: Project description.
  * Author:      Eri Design Studio
  * Author URI:  https://eridesign.com
  * Version:     0.1.0
  * Tags:
- * Text Domain: eri
+ * Text Domain: eri-scaffold
  */
