--- a/assets/css/frontend/base/index.css
+++ b/assets/css/frontend/base/index.css
@@ -1,2 +1,2 @@
-@import url("prefers-reduced-motion.css");
-@import url("wordpress.css");
+@import url('prefers-reduced-motion.css');
+@import url('wordpress.css');
