--- a/assets/css/frontend/style.css
+++ b/assets/css/frontend/style.css
@@ -5,13 +5,13 @@
  */
 
 /* Resets - installed via NPM */
-@import "normalize.css";
+@import 'normalize.css';
 
 /* Global - global pieces like media queries, mixins and placholders */
-@import "global/index.css";
+@import 'global/index.css';
 
 /* Base - base styles such as fonts, typography, and wordpress overrides */
-@import "base/index.css";
+@import 'base/index.css';
 
 /* Layout - styles specific to layout */
 
